--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "googleapis": "^135.0.0",
+    "keycloak-connect": "^24.0.4",
     "mongoose": "^8.3.2",
     "nest-keycloak-connect": "^1.10.0",
     "passport": "^0.7.0",
