--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ndeitch/nestjs-keycloak": "^1.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
@@ -27,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "googleapis": "^135.0.0",
+    "graphql": "^16.8.1",
     "keycloak-connect": "^24.0.4",
     "mongoose": "^8.3.2",
     "nest-keycloak-connect": "^1.10.0",
