--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "googleapis": "^135.0.0",
     "graphql": "^16.8.1",
     "keycloak-connect": "^24.0.4",
