--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@ndeitch/nestjs-keycloak": "^1.2.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "googleapis": "^135.0.0",
     "graphql": "^16.8.1",
-    "keycloak-connect": "^24.0.4",
     "mongoose": "^8.3.2",
-    "nest-keycloak-connect": "^1.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
